--- a/Flux_Calibration/PaperLatex_ML/header.tex
+++ b/Flux_Calibration/PaperLatex_ML/header.tex
@@ -38,6 +38,7 @@
 \usepackage{array}
 \usepackage{colortbl}
 \usepackage{tcolorbox}
+\usepackage{circuitikz}
 \tcbuselibrary{skins}
 \usepackage{tikz,tcolorbox,array,tabularx,colortbl}
 \usetikzlibrary{shapes,arrows,matrix,positioning}
